# DeWork

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.staging  Gemfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
app/controllers/: application_controller.rb  companies_controller.rb  contributions_controller.rb  user_companies_controller.rb  users_controller.rb
app/models/: company.rb  contribution.rb  participation_request.rb  reply.rb  request_participation.rb  user.rb  user_company.rb  user_contribution.rb
app/serializers/: company_serializer.rb  user_serializer.rb
app/services/: blockcypher_service.rb  github_service.rb  market_service.rb
app/workers/: wallet_worker.rb
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  puma.rb  routes.rb
config/environments/: production.rb
config/initializers/: cors.rb  devise.rb
db/: schema.rb  seeds.rb
db/migrate/: 20220210092656_create_users.rb  20220210093322_create_companies.rb  20220210093336_create_contributions.rb  20220210093359_create_user_companies.rb  20220210123628_user_contributions.rb  20220211155734_devise_token_auth_create_users.rb  20220211160224_add_wallet_job_to_users.rb  20220211160458_create_companies.rb  20220211160604_create_contributions.rb  20220211160618_create_user_companies.rb  20220211160628_create_user_contributions.rb  20220324190556_create_replies.rb  20220325183953_create_participation_requests.rb  (+3 more)
docker/: .dockerignore  Dockerfile  docker-compose.yml
rust_lib/: Cargo.toml
(+5 files in other folders)
