[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.2"
rutie = "0.8.3"
rutie-serde = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
dotenv = "0.15.0"
chrono = "0.4.19"
serde_json = "1.0.78"
reqwest = "0.11.9"
